tolk-tester/tests/invalid-syntax/err-3028.tolk
fun noOpReturnsInt(): int asm
    "NOP"
    ""

/**
@compilation_should_fail
@stderr invalid asm instruction
@stderr ""
 */
